--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@
   .container {
     margin: auto;
     max-width: 800px;
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -102,6 +101,7 @@
       /*margin: 2%;*/
      width: 1.5cm;
      height: 1.5cm;
+     margin-left: 2%;
      /*border-radius: 10px;*/
       
   }
@@ -134,10 +134,16 @@
       background-color: white;
       color: grey;
       margin: 1cm;
+      margin-left: 100px;
       align-self: center;
   }
 
-  .new-btn:hover {background-color: gainsboro; border: 1px solid grey;}
+  .new-btn:hover, .print-btn:hover {background-color: gainsboro; border: 1px solid grey;}
+
+  .print-btn {
+    cursor: pointer;
+    color: grey;
+  }
 
  img {
       width: 50%;
